Chapter 09/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-go-server-service
spec:
  selector:
    app: my-go-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
